results/SVCOMP/conversational/log-ExSymExe26-2024_03_12_01_59_32.txt
class Main {
    //@ ensures \result ==> test(x,y,z);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: cannot find symbol
    //@ ensures \result ==> test(x,y,z);
                                 ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: cannot find symbol
    //@ ensures \result ==> test(x,y,z);
                                   ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: cannot find symbol
    //@ ensures \result ==> test(x,y,z);
                                     ^
  symbol:   variable z
  location: class Main
3 errors

class Main {
    //@ ensures \result ==> test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: non-static method test(int,int,int) cannot be referenced from a static context
    //@ ensures \result ==> test(3,8,3);
                            ^
1 error

class Main {
    //@ ensures \result ==> test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: non-static method test(int,int,int) cannot be referenced from a static context
    //@ ensures \result ==> test(3,8,3);
                            ^
1 error

class Main {
    //@ ensures \result ==> inst.test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: cannot find symbol
    //@ ensures \result ==> inst.test(3,8,3);
                            ^
  symbol:   variable inst
  location: class Main
1 error

class Main {
    //@ ensures \result ==> this.test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: non-static variable this cannot be referenced from a static context
    //@ ensures \result ==> this.test(3,8,3);
                            ^
1 error

class Main {
    //@ ensures \result ==> test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: non-static method test(int,int,int) cannot be referenced from a static context
    //@ ensures \result ==> test(3,8,3);
                            ^
1 error

class Main {
    //@ ensures \result ==> test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: non-static method test(int,int,int) cannot be referenced from a static context
    //@ ensures \result ==> test(3,8,3);
                            ^
1 error

class Main {
    //@ ensures \result ==> inst.test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: cannot find symbol
    //@ ensures \result ==> inst.test(3,8,3);
                            ^
  symbol:   variable inst
  location: class Main
1 error

class Main {
    //@ ensures \result ==> this.test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: non-static variable this cannot be referenced from a static context
    //@ ensures \result ==> this.test(3,8,3);
                            ^
1 error

class Main {
    //@ ensures \result ==> test(3,8,3);
    public static boolean f() {
        int a = 3;
        Main inst = new Main();
        int b = 8;
        return inst.test(a, b, a);
    }

    //@ requires true;
    //@ ensures \result ==> (z > 0 && y > 0);
    //@ ensures !\result ==> (z <= 0 || y <= 0);
    public boolean test(int x, int y, int z) {
        System.out.println("Testing ExSymExe26");
        y = x;
        z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            return false;
        }
        if (y > 0) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");

        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:2: error: non-static method test(int,int,int) cannot be referenced from a static context
    //@ ensures \result ==> test(3,8,3);
                            ^
1 error

